--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
-language: "node_js"
+language: node_js
 node_js:
-  - "4"
-  - "6"
+  - '8'
+  - '10'
+  - '11'
 script:
-  - npm test
-  - npm run codecov
+  - yarn run eslint
+  - yarn run check-fmt
+  - yarn run test
+  - yarn run codecov
 after_success:
   - bash <(curl -s https://codecov.io/bash)
