--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "main": "./lib/prettyoutput",
   "license": "MIT",
   "scripts": {
+    "fmt": "prettier --print-width 140 --tab-width=4 --single-quote --bracket-spacing --no-semi --color --write \"{.,{test,lib,benchmark}/**/}/*.js\"",
+    "check-fmt": "prettier --print-width 140 --tab-width=4 --single-quote --bracket-spacing --no-semi --list-different \"{.,{test,lib,benchmark}/**/}/*.js\"",
     "test": "./node_modules/.bin/mocha --reporter spec",
     "eslint": "./node_modules/.bin/eslint . bin/prettyoutput",
     "coverage": "nyc npm run test",
@@ -38,17 +40,18 @@
     "prettyoutput": "./bin/prettyoutput"
   },
   "dependencies": {
-    "colors": "1.1.2",
-    "commander": "2.9.0",
-    "lodash": "4.17.10"
+    "colors": "1.3.x",
+    "commander": "2.19.x",
+    "lodash": "4.17.x"
   },
   "devDependencies": {
-    "columnify": "1.5.4",
-    "eslint": "3.9.1",
+    "columnify": "1.x.x",
+    "eslint": "5.x.x",
     "istanbul": "0.4.5",
-    "mocha": "3.1.2",
-    "nyc": "8.4.0",
-    "prettyjson": "1.1.3",
-    "should": "11.1.1"
+    "mocha": "5.x.x",
+    "nyc": "13.x.x",
+    "prettier": "^1.15.3",
+    "prettyjson": "1.x.x",
+    "should": "13.x.x"
   }
 }
