--- a/package.json
+++ b/package.json
@@ -1,28 +1,40 @@
 {
   "author": "Nadim <nadim.boustani@gmail.com> (https://github.com/bnadim)",
-  "name": "prettyoutput",
-  "description": "Librarie to format js/json objects into a YAML-style colored output. Especially useful to pretty print logs. Performant (benchmarks)",
+  "name": "pretty-output",
+  "description": "Library to format JSON objects into a colorful, YAML-style output. Ideal for pretty printing logs with high performance.",
   "version": "1.2.0",
-  "homepage": "http://github.com/keepitcool/prettyoutput",
+  "homepage": "http://github.com/tduyng/pretty-output",
   "keywords": [
     "json",
-    "js",
+    "javascript",
+    "typescript",
     "log",
     "cli",
-    "prety",
+    "pretty",
     "formatting",
     "colors",
-    "output"
+    "output",
+    "yaml",
+    "pretty-print",
+    "logging",
+    "performance",
+    "json-format",
+    "json-pretty-print"
+  ],
+  "maintainers": [
+    {
+      "name": "Ekino"
+    }
   ],
   "engines": {
     "node": ">=4"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/keepitcool/prettyoutput.git"
+    "url": "http://github.com/tduyng/pretty-output.git"
   },
   "bugs": {
-    "url": "https://github.com/keepitcool/prettyoutput/issues"
+    "url": "http://github.com/tduyng/pretty-output/issues"
   },
   "main": "./lib/prettyoutput",
   "license": "MIT",
@@ -36,9 +48,7 @@
     "benchmark": "node ./benchmark/benchmark.js",
     "changelog": "git log $(git describe --tags --abbrev=0)..HEAD --pretty='* %s' --first-parent"
   },
-  "bin": {
-    "prettyoutput": "./bin/prettyoutput"
-  },
+  "bin": "./bin/pretty-output",
   "dependencies": {
     "colors": "1.3.x",
     "commander": "2.19.x",
@@ -53,5 +63,6 @@
     "prettier": "^1.15.3",
     "prettyjson": "1.x.x",
     "should": "13.x.x"
-  }
+  },
+  "packageManager": "yarn@4.5.1"
 }
