--- a/package.json
+++ b/package.json
@@ -1,68 +1,67 @@
 {
-  "author": "Nadim <nadim.boustani@gmail.com> (https://github.com/bnadim)",
-  "name": "pretty-output",
-  "description": "Library to format JSON objects into a colorful, YAML-style output. Ideal for pretty printing logs with high performance.",
-  "version": "1.2.0",
-  "homepage": "http://github.com/tduyng/pretty-output",
-  "keywords": [
-    "json",
-    "javascript",
-    "typescript",
-    "log",
-    "cli",
-    "pretty",
-    "formatting",
-    "colors",
-    "output",
-    "yaml",
-    "pretty-print",
-    "logging",
-    "performance",
-    "json-format",
-    "json-pretty-print"
-  ],
-  "maintainers": [
-    {
-      "name": "Ekino"
-    }
-  ],
-  "engines": {
-    "node": ">=4"
-  },
-  "repository": {
-    "type": "git",
-    "url": "http://github.com/tduyng/pretty-output.git"
-  },
-  "bugs": {
-    "url": "http://github.com/tduyng/pretty-output/issues"
-  },
-  "main": "./lib/prettyoutput",
-  "license": "MIT",
-  "scripts": {
-    "fmt": "prettier --print-width 140 --tab-width=4 --single-quote --bracket-spacing --no-semi --color --write \"{.,{test,lib,benchmark}/**/}/*.js\"",
-    "check-fmt": "prettier --print-width 140 --tab-width=4 --single-quote --bracket-spacing --no-semi --list-different \"{.,{test,lib,benchmark}/**/}/*.js\"",
-    "test": "./node_modules/.bin/mocha --reporter spec",
-    "eslint": "./node_modules/.bin/eslint . bin/prettyoutput",
-    "coverage": "nyc npm run test",
-    "codecov": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec",
-    "benchmark": "node ./benchmark/benchmark.js",
-    "changelog": "git log $(git describe --tags --abbrev=0)..HEAD --pretty='* %s' --first-parent"
-  },
-  "bin": "./bin/pretty-output",
-  "dependencies": {
-    "colors": "1.3.x",
-    "commander": "2.19.x",
-    "lodash": "4.17.x"
-  },
-  "devDependencies": {
-    "columnify": "1.x.x",
-    "eslint": "5.x.x",
-    "istanbul": "0.4.5",
-    "mocha": "5.x.x",
-    "nyc": "13.x.x",
-    "prettier": "^1.15.3",
-    "prettyjson": "1.x.x",
-    "should": "13.x.x"
-  },
-  "packageManager": "yarn@4.5.1"
+    "author": "Nadim <nadim.boustani@gmail.com> (https://github.com/bnadim)",
+    "name": "pretty-output",
+    "description": "Library to format JSON objects into a colorful, YAML-style output. Ideal for pretty printing logs with high performance.",
+    "version": "1.2.0",
+    "homepage": "http://github.com/tduyng/pretty-output",
+    "keywords": [
+        "json",
+        "javascript",
+        "typescript",
+        "log",
+        "cli",
+        "pretty",
+        "formatting",
+        "colors",
+        "output",
+        "yaml",
+        "pretty-print",
+        "logging",
+        "performance",
+        "json-format",
+        "json-pretty-print"
+    ],
+    "maintainers": [
+        {
+            "name": "Ekino"
+        }
+    ],
+    "engines": {
+        "node": ">=4"
+    },
+    "repository": {
+        "type": "git",
+        "url": "http://github.com/tduyng/pretty-output.git"
+    },
+    "bugs": {
+        "url": "http://github.com/tduyng/pretty-output/issues"
+    },
+    "main": "./lib/prettyoutput",
+    "license": "MIT",
+    "scripts": {
+        "lint": "biome check --write",
+        "check": "biome check",
+        "test": "./node_modules/.bin/mocha --reporter spec",
+        "eslint": "./node_modules/.bin/eslint . bin/prettyoutput",
+        "coverage": "nyc npm run test",
+        "codecov": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec",
+        "benchmark": "node ./benchmark/benchmark.js",
+        "changelog": "git log $(git describe --tags --abbrev=0)..HEAD --pretty='* %s' --first-parent"
+    },
+    "bin": "./bin/pretty-output",
+    "dependencies": {
+        "colors": "1.3.x",
+        "commander": "2.19.x",
+        "lodash": "4.17.x"
+    },
+    "devDependencies": {
+        "@biomejs/biome": "1.9.4",
+        "columnify": "1.x.x",
+        "istanbul": "0.4.5",
+        "mocha": "5.x.x",
+        "nyc": "13.x.x",
+        "prettyjson": "1.x.x",
+        "should": "13.x.x"
+    },
+    "packageManager": "yarn@4.5.1"
 }
