--- a/package.json
+++ b/package.json
@@ -50,18 +50,18 @@
     },
     "bin": "./bin/pretty-output",
     "dependencies": {
-        "colors": "1.3.x",
-        "commander": "2.19.x",
-        "lodash": "4.17.x"
+        "colors": "1.x",
+        "commander": "12.x",
+        "lodash": "4.x"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
-        "columnify": "1.x.x",
+        "columnify": "^1.6.0",
         "istanbul": "0.4.5",
-        "mocha": "5.x.x",
-        "nyc": "13.x.x",
-        "prettyjson": "1.x.x",
-        "should": "13.x.x"
+        "mocha": "^10.7.3",
+        "nyc": "^17.1.0",
+        "prettyjson": "^1.2.5",
+        "should": "^13.2.3"
     },
     "packageManager": "yarn@4.5.1"
 }
