--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
         "lint": "biome check --write",
         "check": "biome check",
         "test": "./node_modules/.bin/mocha --reporter spec",
-        "eslint": "./node_modules/.bin/eslint . bin/prettyoutput",
         "coverage": "nyc npm run test",
         "codecov": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec",
         "benchmark": "node ./benchmark/benchmark.js",
@@ -51,13 +50,11 @@
     "bin": "./bin/pretty-output",
     "dependencies": {
         "colors": "1.x",
-        "commander": "12.x",
-        "lodash": "4.x"
+        "commander": "12.x"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
         "columnify": "^1.6.0",
-        "istanbul": "0.4.5",
         "mocha": "^10.7.3",
         "nyc": "^17.1.0",
         "prettyjson": "^1.2.5",
