--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
         "benchmark": "node ./benchmark/benchmark.js",
         "changelog": "git log $(git describe --tags --abbrev=0)..HEAD --pretty='* %s' --first-parent"
     },
-    "bin": "./bin/pretty-output",
+    "bin": {
+        "pretty-output": "./bin/pretty-output"
+    },
     "dependencies": {
         "colors": "1.x",
         "commander": "12.x"
