--- a/biome.json
+++ b/biome.json
@@ -45,6 +45,7 @@
             "build",
             "coverage",
             "dist",
+            "lib",
             "docs",
             "node_modules",
             "out"
