feat(2.0): replace ts-node by tsx and update examples

--- a/.mocharc.yaml
+++ b/.mocharc.yaml
@@ -4,5 +4,4 @@ color: true
 ui: bdd
 enable-source-maps: true
 require:
-  - ts-node/register/transpile-only
-  - source-map-support/register
+  - tsx
