--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
       "strict": true,
       "target": "ES2020",
     },
-    "include": ["src/**/*", "tests/**/*", "examples/**/*"],
+    "include": ["src/**/*", "tests/**/*", "examples/**/*", "benchmarks/**/*"],
     "exclude": ["node_modules", "lib"],
   }
   
