--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,30 @@
 {
     "compilerOptions": {
-      "allowJs": true,
-      "allowSyntheticDefaultImports": true,
-      "allowUnreachableCode": false,
-      "declaration": true,
-      "esModuleInterop": true,
-      "forceConsistentCasingInFileNames": true,
-      "incremental": true,
-      "lib": ["ES2023", "DOM"],
-      "module": "CommonJS",
-      "noErrorTruncation": true,
-      "noFallthroughCasesInSwitch": true,
-      "noImplicitAny": true,
-      "noImplicitOverride": true,
-      "noImplicitReturns": true,
-      "noPropertyAccessFromIndexSignature": true,
-      "noUncheckedIndexedAccess": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
-      "outDir": "./lib",
-      "resolveJsonModule": true,
-      "skipLibCheck": true,
-      "sourceMap": true,
-      "strict": true,
-      "target": "ES2020",
+        "allowJs": true,
+        "allowSyntheticDefaultImports": true,
+        "allowUnreachableCode": false,
+        "declaration": true,
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "incremental": true,
+        "lib": ["ES2023", "DOM"],
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
+        "noErrorTruncation": true,
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitAny": true,
+        "noImplicitOverride": true,
+        "noImplicitReturns": true,
+        "noPropertyAccessFromIndexSignature": true,
+        "noUncheckedIndexedAccess": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "outDir": "./lib",
+        "resolveJsonModule": true,
+        "skipLibCheck": true,
+        "strict": true,
+        "target": "ES2020"
     },
-    "include": ["src/**/*", "tests/**/*", "examples/**/*", "benchmarks/**/*"],
-    "exclude": ["node_modules", "lib"],
-  }
-  
+    "include": ["src/**/*", "tests/**/*", "examples/**/*", "benchmark/**/*"],
+    "exclude": ["node_modules", "lib"]
+}
