--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -2,7 +2,7 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
         "declaration": true,
-        "sourceMap": true,
+        "sourceMap": true
     },
     "include": ["./src/**/*"]
 }
