--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
         "outDir": "./lib",
         "resolveJsonModule": true,
         "skipLibCheck": true,
+        "sourceMap": true,
         "strict": true,
         "target": "ES2020"
     },
