--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,8 +1,7 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        "declaration": true,
-        "sourceMap": true
+        "declaration": true
     },
     "include": ["./src/**/*"]
 }
