--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
         }
     ],
     "engines": {
-        "node": ">=4"
+        "node": ">=18"
     },
     "repository": {
         "type": "git",
@@ -37,10 +37,7 @@
         "url": "http://github.com/tduyng/pretty-output/issues"
     },
     "type": "module",
-    "files": [
-        "/lib",
-        "/bin"
-    ],
+    "files": ["/lib", "/bin"],
     "main": "lib/esm/index.js",
     "types": "lib/esm/index.d.ts",
     "exports": {
