ci(2.0): remove travis, implement github action for CI testing

--- a/biome.json
+++ b/biome.json
@@ -48,7 +48,8 @@
             "lib",
             "docs",
             "node_modules",
-            "out"
+            "out",
+            "package.json"
         ]
     }
 }
