--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "forceConsistentCasingInFileNames": true,
         "incremental": true,
         "lib": ["ES2023", "DOM"],
-        "module": "NodeNext",
+        "module": "ESNext",
         "noErrorTruncation": true,
         "noFallthroughCasesInSwitch": true,
         "noImplicitAny": true,
@@ -19,7 +19,6 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "outDir": "./lib",
-        "resolveJsonModule": true,
         "skipLibCheck": true,
         "sourceMap": true,
         "strict": true,
