--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "forceConsistentCasingInFileNames": true,
         "incremental": true,
         "lib": ["ES2023", "DOM"],
-        "module": "ESNext",
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
         "noErrorTruncation": true,
         "noFallthroughCasesInSwitch": true,
         "noImplicitAny": true,
