chore(2.0): fix module build option

--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,6 +1,7 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
+        "module": "NodeNext",
         "declaration": true
     },
     "include": ["./src/**/*"]
