--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,7 @@
         "forceConsistentCasingInFileNames": true,
         "incremental": true,
         "lib": ["ES2023", "DOM"],
-        "module": "NodeNext",
-        "moduleResolution": "NodeNext",
+        "module": "ESNext",
         "noErrorTruncation": true,
         "noFallthroughCasesInSwitch": true,
         "noImplicitAny": true,
