--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,10 +28,11 @@ jobs:
           node-version: '22.x'
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Download built artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: built-artifacts
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Build the project
+        run: yarn build
 
       - name: Bump version
         run: yarn version ${{ github.event.inputs.strategy }}
