--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
         "conventional-changelog-cli": "^5.0.0",
         "mocha": "^10.7.3",
         "prettyjson": "^1.2.5",
+        "prettyoutput": "^1.2.0",
         "tsx": "^4.19.1",
         "typescript": "^5.6.3"
     },
