--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "author": "Nadim <nadim.boustani@gmail.com> (https://github.com/bnadim)",
-    "name": "@tduyng/prettyoutput",
+    "name": "@ekino/prettyoutput",
     "description": "Library to format JSON objects into a colorful, YAML-style output. Ideal for pretty printing logs with high performance.",
     "version": "1.2.0",
-    "homepage": "http://github.com/tduyng/pretty-output",
+    "homepage": "http://github.com/ekino/pretty-output",
     "keywords": [
         "json",
         "javascript",
@@ -31,10 +31,10 @@
     },
     "repository": {
         "type": "git",
-        "url": "http://github.com/tduyng/pretty-output.git"
+        "url": "http://github.com/ekino/pretty-output.git"
     },
     "bugs": {
-        "url": "http://github.com/tduyng/pretty-output/issues"
+        "url": "http://github.com/ekino/pretty-output/issues"
     },
     "type": "module",
     "files": [
@@ -63,7 +63,7 @@
         "test": "mocha 'tests/**/*.[tj]s'",
         "coverage": "c8 -r=cobertura -r=lcov -r=text-summary npm run test",
         "benchmark": "tsx ./benchmark/benchmark.js",
-        "changelog": "git log $(git describe --tags --abbrev=0)..HEAD --pretty='* %s' --first-parent",
+        "changelog": "conventional-changelog -p conventionalcommits -r -u 0",
         "examples": "tsx ./examples/example.ts",
         "postinstall": "git config core.hooksPath ./.githooks || true"
     },
