--- a/package.json
+++ b/package.json
@@ -84,22 +84,22 @@
         "prettyoutput-esm": "./bin/pretty_output.js"
     },
     "dependencies": {
-        "commander": "12.x"
+        "commander": "13.x"
     },
     "devDependencies": {
-        "@biomejs/biome": "1.9.4",
-        "@poppinss/dumper": "^0.4.2",
+        "@biomejs/biome": "^1.9.4",
+        "@poppinss/dumper": "^0.6.2",
         "@types/columnify": "^1.5.4",
-        "@types/mocha": "^10.0.9",
-        "@types/node": "^22.7.9",
+        "@types/mocha": "^10.0.10",
+        "@types/node": "^22.10.7",
         "@types/prettyjson": "^0.0.33",
-        "c8": "^10.1.2",
+        "c8": "^10.1.3",
         "columnify": "^1.6.0",
-        "commitlint": "^19.5.0",
-        "mocha": "^10.7.3",
+        "commitlint": "^19.6.1",
+        "mocha": "^11.0.1",
         "prettyjson": "^1.2.5",
         "prettyoutput": "^1.2.0",
-        "tsx": "^4.19.1",
-        "typescript": "^5.6.3"
+        "tsx": "^4.19.2",
+        "typescript": "^5.7.3"
     }
 }
