--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "scripts": {
         "lint": "biome check --write",
         "check": "biome check",
-        "test": "mocha 'tests/**/*.[tj]s'",
-        "coverage": "c8 -r=cobertura -r=lcov -r=text-summary npm run test",
+        "test": "node --import tsx --test tests/index.test.ts",
+        "coverage": "c8 -r=cobertura -r=lcov -r=text-summary node --import tsx --test tests/index.test.ts",
         "build": "pnpm run build:esm && pnpm run build:cjs",
         "build:esm": "tsc -p tsconfig.lib.json --module NodeNext --outDir lib/esm",
         "build:cjs": "tsc -p tsconfig.lib.json --module CommonJS --moduleResolution Node --outDir lib/cjs",
@@ -90,13 +90,11 @@
         "@biomejs/biome": "^1.9.4",
         "@poppinss/dumper": "^0.6.2",
         "@types/columnify": "^1.5.4",
-        "@types/mocha": "^10.0.10",
         "@types/node": "^22.10.7",
         "@types/prettyjson": "^0.0.33",
         "c8": "^10.1.3",
         "columnify": "^1.6.0",
         "commitlint": "^19.6.1",
-        "mocha": "^11.0.1",
         "prettyjson": "^1.2.5",
         "prettyoutput": "^1.2.0",
         "tsx": "^4.19.2",
