feat(2.0): apply more best practice for tsconfig.json

--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
         "test": "node --import tsx --test tests/index.test.ts",
         "coverage": "c8 -r=cobertura -r=lcov -r=text-summary node --import tsx --test tests/index.test.ts",
         "build": "pnpm run build:esm && pnpm run build:cjs",
-        "build:esm": "tsc -p tsconfig.lib.json --module NodeNext --outDir lib/esm",
-        "build:cjs": "tsc -p tsconfig.lib.json --module CommonJS --moduleResolution Node --outDir lib/cjs",
+        "build:esm": "tsc -p tsconfig.lib.json --outDir lib/esm",
+        "build:cjs": "tsc -p tsconfig.lib.json --module CommonJS --moduleResolution Node --verbatimModuleSyntax false --outDir lib/cjs",
         "postbuild:cjs": "echo '{\"type\": \"commonjs\"}' > lib/cjs/package.json",
         "benchmark": "tsx ./benchmark/benchmark.ts",
         "benchmark-deno": "deno -A --unstable-sloppy-imports ./benchmark/benchmark.ts",
