--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,31 @@
 {
     "compilerOptions": {
-        "allowJs": true,
         "allowSyntheticDefaultImports": true,
         "allowUnreachableCode": false,
+        "allowUnusedLabels": false,
         "declaration": true,
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "incremental": true,
-        "lib": ["ES2023", "DOM"],
+        "isolatedDeclarations": true,
+        "lib": ["ES2024", "DOM"],
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
         "noErrorTruncation": true,
         "noFallthroughCasesInSwitch": true,
-        "noImplicitAny": true,
         "noImplicitOverride": true,
         "noImplicitReturns": true,
         "noPropertyAccessFromIndexSignature": true,
         "noUncheckedIndexedAccess": true,
+        "noUncheckedSideEffectImports": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "outDir": "./lib",
         "skipLibCheck": true,
         "sourceMap": true,
         "strict": true,
-        "target": "ES2020"
+        "target": "ES2020",
+        "verbatimModuleSyntax": true
     },
     "include": ["src/**/*", "tests/**/*", "examples/**/*", "benchmark/**/*", "scripts/**/*"],
     "exclude": ["node_modules", "lib"]
