--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,7 +1,8 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        "declaration": true
+        "declaration": true,
+        "declarationMap": true
     },
     "include": ["./src/**/*"]
 }
