--- a/package.json
+++ b/package.json
@@ -79,20 +79,20 @@
         "prettyoutput-cjs": "./bin/pretty_output.cjs"
     },
     "dependencies": {
-        "commander": "13.x"
+        "commander": "13.1.0"
     },
     "devDependencies": {
-        "@biomejs/biome": "^1.9.4",
-        "@poppinss/dumper": "^0.6.2",
-        "@types/columnify": "^1.5.4",
-        "@types/node": "^22.10.7",
-        "@types/prettyjson": "^0.0.33",
-        "c8": "^10.1.3",
-        "columnify": "^1.6.0",
-        "commitlint": "^19.6.1",
-        "prettyjson": "^1.2.5",
-        "prettyoutput": "^1.2.0",
-        "tsx": "^4.19.2",
-        "typescript": "^5.7.3"
+        "@biomejs/biome": "1.9.4",
+        "@poppinss/dumper": "0.6.2",
+        "@types/columnify": "1.5.4",
+        "@types/node": "22.13.4",
+        "@types/prettyjson": "0.0.33",
+        "c8": "10.1.3",
+        "columnify": "1.6.0",
+        "commitlint": "19.7.1",
+        "prettyjson": "1.2.5",
+        "prettyoutput": "1.2.0",
+        "tsx": "4.19.2",
+        "typescript": "5.7.3"
     }
 }
