ci: config github bot user for release

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,19 +41,20 @@ jobs:
       - name: Build the project
         run: pnpm run build
 
+      - name: Set up Git user
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+
       - name: Bump version
         id: versioning
         run: |
-          pnpm version ${{ github.event.inputs.strategy }}
+          npm version ${{ github.event.inputs.strategy }} -m "chore(release): v%s"
           VERSION=$(node -p "require('./package.json').version")
           echo "current-version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Commit and tag release
         run: |
-          git config user.name github-actions[bot]
-          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-          git add .
-          git commit -m "chore(release): v${{ steps.versioning.outputs.current-version }}"
           git tag v${{ steps.versioning.outputs.current-version }}
           git push --follow-tags
 
