--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
         "target": "ES2020",
         "verbatimModuleSyntax": true
     },
-    "include": ["src/**/*", "tests/**/*", "examples/**/*", "benchmark/**/*", "scripts/**/*"],
+    "include": ["src/**/*", "tests/**/*", "examples/**/*", "benchmark/**/*"],
     "exclude": ["node_modules", "lib"]
 }
