--- a/.github/workflows/dependencies.yaml
+++ b/.github/workflows/dependencies.yaml
@@ -1,7 +1,13 @@
 name: Dependency Updates
+
 on:
   schedule:
-    - cron: '0 0 1,5,10,15,20,25 * *' # Runs on the 1st and 15th
+    - cron: '0 0 1,5,10,15,20,25 * *' # Runs on the 1st, 5st, 10th ... of each month
+
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   update-deps:
     runs-on: ubuntu-latest
@@ -21,59 +27,80 @@ jobs:
           node-version: '22.x'
           cache: 'pnpm'
 
+      - name: Switch to update-deps branch
+        run: |
+          git fetch origin
+          if git ls-remote --exit-code --heads origin update-deps; then
+            git switch update-deps
+            git reset --hard origin/master
+          else
+            git switch master
+            git branch -D update-deps || true
+            git switch -c update-deps
+          fi
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+
       - name: Update dependencies
-        run: pnpm update --latest
+        id: update_deps
+        run: |
+          pnpm update --latest --save-exact
+          if git diff --quiet; then
+            echo "No updates found"
+            echo "UPDATE_FOUND=false" >> $GITHUB_ENV
+          else
+            echo "Updates found"
+            echo "UPDATE_FOUND=true" >> $GITHUB_ENV
+          fi
 
       - name: Check linter
+        if: env.UPDATE_FOUND == 'true'
         run: pnpm run check
 
       - name: Check typing
+        if: env.UPDATE_FOUND == 'true'
         run: pnpm run check-typing
 
       - name: Run tests with coverage
+        if: env.UPDATE_FOUND == 'true'
         run: pnpm run coverage
         env:
           CI: true
 
-      - name: Commit dependency updates if any
-        if: ${{ success() }}
+      - name: Commit dependency updates if found
+        if: env.UPDATE_FOUND == 'true'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git switch -c update-deps
-          if [ -n "$(git status --porcelain)" ]; then
-            git add .
-            git commit -m "chore(deps): update latest dependencies"
-            git push --set-upstream origin update-deps --force
-          else
-            echo "No dependency updates found. Exiting."
-            exit 0
-          fi
+          git add .
+          git commit -m "chore(deps): update latest dependencies"
+          git push --set-upstream origin update-deps --force
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_PAT: ${{ secrets.GH_PAT }}
 
       - name: Create Pull Request
-        if: ${{ success() }}
+        if: env.UPDATE_FOUND == 'true'
         id: create_pr
         uses: peter-evans/create-pull-request@v7
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_PAT }}
           branch: update-deps
+          base: master
           title: 'chore(deps): update latest dependencies'
           body: 'Automated dependency update via pnpm update --latest'
           labels: dependencies
           commit-message: 'chore(deps): update latest dependencies'
 
-      # - name: Enable Pull Request automerge
-      #   run: gh pr merge --merge --auto "1"
-      #   env:
-      #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #
-      # - name: Delete update branch after merge
-      #   if: ${{ success() }}
-      #   run: |
-      #     git push origin --delete update-deps || echo "Branch already deleted"
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Enable Pull Request automerge
+        if: env.UPDATE_FOUND == 'true'
+        run: gh pr merge --merge --auto "1"
+        env:
+          GITHUB_PAT: ${{ secrets.GH_PAT }}
+
+      - name: Delete update branch after merge
+        if: ${{ success() }}
+        run: |
+          git push origin --delete update-deps || echo "Branch already deleted"
+        env:
+          GITHUB_PAT: ${{ secrets.GH_PAT }}
