--- a/.github/workflows/dependencies.yaml
+++ b/.github/workflows/dependencies.yaml
@@ -75,7 +75,7 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "chore(deps): update latest dependencies"
-          git push --set-upstream origin update-deps --force
+          git push origin update-deps
         env:
           GITHUB_PAT: ${{ secrets.GH_PAT }}
 
@@ -91,16 +91,3 @@ jobs:
           body: 'Automated dependency update via pnpm update --latest'
           labels: dependencies
           commit-message: 'chore(deps): update latest dependencies'
-
-      - name: Enable Pull Request automerge
-        if: env.UPDATE_FOUND == 'true'
-        run: gh pr merge --merge --auto "1"
-        env:
-          GITHUB_PAT: ${{ secrets.GH_PAT }}
-
-      - name: Delete update branch after merge
-        if: ${{ success() }}
-        run: |
-          git push origin --delete update-deps || echo "Branch already deleted"
-        env:
-          GITHUB_PAT: ${{ secrets.GH_PAT }}
