--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -2,7 +2,8 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
         "declaration": true,
-        "declarationMap": true
+        "declarationMap": true,
+        "isolatedDeclarations": true
     },
     "include": ["./src/**/*"]
 }
