--- a/.github/workflows/dependencies.yaml
+++ b/.github/workflows/dependencies.yaml
@@ -75,7 +75,7 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "chore(deps): update latest dependencies"
-          git push origin update-deps
+          git push origin update-deps --force
         env:
           GITHUB_PAT: ${{ secrets.GH_PAT }}
 
