--- a/biome.json
+++ b/biome.json
@@ -1,8 +1,6 @@
 {
-    "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-    "organizeImports": {
-        "enabled": true
-    },
+    "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
+    "assist": { "actions": { "source": { "organizeImports": "on" } } },
     "linter": {
         "enabled": true,
         "rules": {
@@ -15,7 +13,7 @@
         "indentWidth": 4,
         "lineWidth": 100,
         "formatWithErrors": true,
-        "ignore": [],
+        "includes": ["**"],
         "attributePosition": "auto"
     },
     "javascript": {
@@ -32,24 +30,25 @@
         }
     },
     "files": {
-        "ignore": [
-            ".DS_Store",
-            ".git",
-            ".githooks",
-            ".github",
-            ".idea",
-            ".nyc_output",
-            ".pnpm-store",
-            ".vscode",
-            ".yarn",
-            "build",
-            "coverage",
-            "dist",
-            "lib",
-            "docs",
-            "node_modules",
-            "out",
-            "package.json"
+        "includes": [
+            "**",
+            "!**/.DS_Store",
+            "!**/.git",
+            "!**/.githooks",
+            "!**/.github",
+            "!**/.idea",
+            "!**/.nyc_output",
+            "!**/.pnpm-store",
+            "!**/.vscode",
+            "!**/.yarn",
+            "!**/build",
+            "!**/coverage",
+            "!**/dist",
+            "!**/lib",
+            "!**/docs",
+            "!**/node_modules",
+            "!**/out",
+            "!**/package.json"
         ]
     }
 }
