--- a/package.json
+++ b/package.json
@@ -80,20 +80,20 @@
         "prettyoutput-cjs": "./bin/pretty_output.cjs"
     },
     "dependencies": {
-        "commander": "14.x"
+        "commander": "~14.0.1"
     },
     "devDependencies": {
-        "@biomejs/biome": "2.1.2",
+        "@biomejs/biome": "2.2.4",
         "@poppinss/dumper": "0.6.4",
         "@types/columnify": "1.5.4",
-        "@types/node": "24.1.0",
+        "@types/node": "24.5.2",
         "@types/prettyjson": "0.0.33",
         "c8": "10.1.3",
         "columnify": "1.6.0",
         "commitlint": "19.8.1",
         "prettyjson": "1.2.5",
         "prettyoutput": "1.2.0",
-        "tsx": "4.20.3",
-        "typescript": "5.8.3"
+        "tsx": "4.20.5",
+        "typescript": "5.9.2"
     }
 }
